updated info endpoint to capture threshold metric. clarified api language. updated go example accordingly
